
2008-10-01 - Release Version: 0.2.b.1

  - Added support for displaying ErrorExceptions raised by trigger_error()
  - (Issue 25) Wrong order in FireBug Console
  - Removed dependency on jQuery for Ajax requests
  - Added info message with link in console when server library is not latest available
  - Added detection and recording of server wildfire plugin version
  - Fix for Wildfire JsonStream to allow Wf-*-Index header to be sent in any position
  - Fix for TABLE logging style to allow table label in meta.label as well as data[0]
  - (Issue 31) Log messages with labels reproduced as Array(2) in firebug console
  - Added support for console groups
  - Added support for message labels when using the wildfire protocol
  - Added resizing links to variable viewer overlay and persist last size in preferences
  - (Issue 11) Variable inspection for arrays logged to console
  - (Issue 30) Allow explicit wrapping of logging data
  - Major work on new variable renderers for console
  - (Issue 16) Escape HTML in variable values
  - Capitalized FALSE, TRUE, NULL in variable renderer overlay
  - Changed variable renderer in overlay to use nested DIV's instead of whitespace for indentation
  - Updated link to discussion group/forum

2008-08-25 - Release Version: 0.1.2
2008-08-24 - Release Version: 0.1.1.2

  - (Issue 15) FirePHP does not display messages in the console with latest version of Firebug
	- (Issue 10) Prevent "not well-formed error" in JS console when loading processor and renderer
	- (Issue 14) Updated wildfire protocol to wrap header message values with "|"
	- Updated Net panel override to make it consistent with latest changes in fb 1.2

2008-07-31 - Release Version: 0.1.1.1
2008-07-31 - Release Version: 0.1.1

	- Nothing changed

2008-07-30 - Release Version: 0.1.0.8

	- Bugfix - CSS style not added when FirePHP first loads
	- Updated rendering of null, false and true in Variable Viewer

2008-07-30 - Release Version: 0.1.0.7
