@@ -1,4 +1,6 @@
 
+  - Bugfix in Wildfire JsonProtocol handler to allow Index message in any position
+
 2008-10-01 - Release Version: 0.2.b.1
 
   - Added support for displaying ErrorExceptions raised by trigger_error()
